Customer Login Page Password Field Changed to EditTextPassword
Customer Login Page Password Field Changed to EditTextPassword

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,7 @@
                     android:id="@+id/passwordText"
                     style="@style/modifiedEditText"
                     android:hint="@string/login_password_hint"
-                    android:inputType="textEmailAddress"
+                    android:inputType="textPassword"
                     android:maxLines="1" />
 
             </com.google.android.material.textfield.TextInputLayout>
