--- a/app/src/main/res/layout/activity_check_email.xml
+++ b/app/src/main/res/layout/activity_check_email.xml
@@ -24,7 +24,7 @@
 
 
     <EditText
-        android:id="@+id/editTextEmail"
+        android:id="@+id/editTextCheckEmail"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:hint="Email"
