--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -25,7 +25,7 @@
         android:textColor="#333333"/>
 
     <EditText
-        android:id="@+id/editTextUsername"
+        android:id="@+id/editTextNewPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="New Password"
@@ -36,7 +36,7 @@
         android:layout_marginBottom="16dp"/>
 
     <EditText
-        android:id="@+id/editTextEmail"
+        android:id="@+id/editTextNewPasswordConfirm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Confirm Password"
