--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
                 android:text="Forgot Password?"
                 android:textColor="@color/primaryTextColor"
                 android:textSize="@dimen/newsMoreTextSize"
-                android:onClick="goToResetPasswordPageCustomerEmailPart"/>
+                android:onClick="goToCheckEmailPart"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/circularLoginButton"
