--- a/app/src/main/res/layout/activity_update_profile.xml
+++ b/app/src/main/res/layout/activity_update_profile.xml
@@ -334,7 +334,7 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:src="@drawable/ic_baseline_passwordblue_24"/>
-                <EditText
+                <TextView
                     android:id="@+id/updateEditTextPassword"
                     style="@style/modifiedUpdateEditText"
                     android:hint="Password"
